fix nav tab overflow

--- a/frontend/less/espo-vertical/layout.less
+++ b/frontend/less/espo-vertical/layout.less
@@ -52,6 +52,11 @@ body > #header .navbar-brand span.home-icon {
     border-left-width: @navbar-color-border-width;
     border-left-style: solid;
     border-color: transparent;
+
+    > span.full-label {
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+    }
 }
 
 @media screen and (min-width: @screen-sm-min) {
